--- a/cmd/web/base.templ
+++ b/cmd/web/base.templ
@@ -5,7 +5,8 @@ templ Base() {
 	<html lang="en">
 		<head>
 			<meta charset="utf-8"/>
-			<title>Go Blueprint Hello</title>
+			<title>Jot</title>
+            <link href="assets/css/output.css" rel="stylesheet"/>
 			<script src="assets/js/htmx.min.js"></script>
 		</head>
 		<body>
