update air config

--- a/cmd/web/home.templ
+++ b/cmd/web/home.templ
@@ -24,7 +24,7 @@ templ HomePage() {
 				</a>
 				<nav class="ml-auto flex gap-4 sm:gap-6">
 					<a class="text-sm font-medium hover:underline underline-offset-4" href="#">
-						Features
+						features
 					</a>
 					<a href="#" class="text-sm font-medium hover:underline underline-offset-4">
 						Instructions
