create session management with scs

--- a/cmd/web/base.templ
+++ b/cmd/web/base.templ
@@ -9,10 +9,13 @@ templ Base() {
 			<link href="assets/css/output.css" rel="stylesheet"/>
 			<script src="assets/js/htmx.min.js"></script>
 		</head>
-		<body>
+		<body hx-boost="true" hx-ext="debug">
 			<main>
 				{ children... }
 			</main>
+			<script>
+				htmx.logAll();
+			</script>
 		</body>
 	</html>
 }
