--- a/cmd/web/home.templ
+++ b/cmd/web/home.templ
@@ -1,9 +1,18 @@
 package web
 
-templ HomePage() {
+import "github.com/diegoalzate/jot/internal/query"
+
+templ HomePage(isLoggedIn bool, user query.User) {
 	@Base() {
-		<div class="flex flex-col min-h-[100dvh]">
-			<button type="button" hx-get="/api/auth/discord">sign in google</button>
-		</div>
+		if isLoggedIn {
+			<div>
+				<h1>Welcome, { user.Email }</h1>
+				<p>you are logged in</p>
+			</div>
+		} else {
+			<div class="flex flex-col min-h-[100dvh]">
+				<button type="button" hx-get="/api/auth/discord" hx-push-url="true">sign in discord</button>
+			</div>
+		}
 	}
 }
