--- a/cmd/web/home.templ
+++ b/cmd/web/home.templ
@@ -7,7 +7,27 @@ templ HomePage(user query.User, guilds []*discordgo.UserGuild) {
 	@Base() {
 		<div>
 			<h1>Welcome to Jot</h1>
-			<div></div>
+			<div class="flex flex-wrap">
+				for _, guild := range guilds {
+					<div class="rounded-lg border bg-card text-card-foreground shadow-sm w-full max-w-md" data-v0-t="card">
+						<div class="flex-col space-y-1.5 p-6 flex items-center gap-4">
+							<div class="space-y-1">
+								<h3 class="whitespace-nowrap text-2xl font-semibold leading-none tracking-tight">{ guild.Name }</h3>
+							</div>
+						</div>
+						<div class="p-6 grid gap-4">
+							<button
+								class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-primary text-primary-foreground hover:bg-primary/90 h-10 px-4 py-2 w-full"
+								as="a"
+								href="https://example.com/install-bot"
+								target="_blank"
+							>
+								Install Bot
+							</button>
+						</div>
+					</div>
+				}
+			</div>
 		</div>
 	}
 }
