--- a/cmd/ui/login.templ
+++ b/cmd/ui/login.templ
@@ -3,7 +3,7 @@ package ui
 templ LoginPage() {
 	@Base() {
 		<div class="flex flex-col min-h-[100dvh]">
-			<button type="button" hx-get="/api/auth/discord" hx-push-url="true">sign in discord</button>
+			<button type="button" hx-get="/auth/discord" hx-push-url="true">sign in discord</button>
 		</div>
 	}
 }
